--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-	<h1>Hello Coursera! It's a great course!</hi>
+	<h1>Hello Coursera!</hi>
 </body>
 </html>
