module 2 solution validated

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,4 +1,4 @@
-</!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -22,7 +22,7 @@
 		</section>			
 		<section id="menu_section_sushi" class="menu_section">
 			<article class="menu_section_article">
-				<div id="section_header_sushi"class="section_header">Sushi</div>
+				<div id="section_header_sushi" class="section_header">Sushi</div>
 				<div class="menu_section_text">This is a placeholder text. It will be replaced with actual content.This is a placeholder text. It will be replaced with actual content.This is a placeholder text. It will be replaced with actual content.This is a placeholder text. It will be replaced with actual content.This is a placeholder text. It will be replaced with actual content.</div>
 			</article>
 		</section>
