--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -10,7 +10,7 @@
   </head>
 <body>
   <header>
-    <nav id="" class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <div class="navbar-brand pull-left">Food, LLC</div>
@@ -39,7 +39,7 @@
     </nav>  
   </header>
 
-  <div id="main-content" class="container">
+  <div id="main-content" class="container-fluid">
     <h1 class="text-center">Our Menu</h1>  
     <div id="menu-grid" class="row">
       <div class="col-xs-12 menu-section">
